[tool.poetry]
name = "repl_python3_beta_SL"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dblpy = "^0.4.0"
discord = "^1.7.3"
Flask = "^2.0.1"
lyricsgenius = "^3.0.1"
pytz = "^2021.1"
youtube_dl = "^2021.6.6"
async-timeout = "^3.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
